--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "editor.tabSize": 2,
-    "editor.renderWhitespace": "trailing",
+    "editor.renderWhitespace": "all",
     "editor.renderControlCharacters": true,
     "files.autoSave": "afterDelay",
     "files.autoSaveDelay": 1000,
